# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "hwnd"
version                                 = "0.0.0-git"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
repository                              = "https://github.com/MaulingMonkey/hwnd"
documentation                           = "https://docs.rs/hwnd"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "Well documented, safe-leaning, sound, low-level API bindings to `HWND`-adjacent APIs"
keywords                                = ["hwnd", "window", "win32", "windowing"]
categories                              = ["api-bindings", "gui", "os::windows-apis"] # https://crates.io/category_slugs
exclude                                 = [".vscode"]

[lib]
path                                    = "src/_lib.rs"

[package.metadata.docs.rs]
all-features                            = true
default-target                          = "x86_64-pc-windows-msvc"
targets                                 = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[features]
raw-window-handle-0-1                   = ["hwnd0/raw-window-handle-0-1"]
raw-window-handle-0-2                   = ["hwnd0/raw-window-handle-0-2"]
raw-window-handle-0-3                   = ["hwnd0/raw-window-handle-0-3"]
raw-window-handle-0-4                   = ["hwnd0/raw-window-handle-0-4"]
raw-window-handle-0-5                   = ["hwnd0/raw-window-handle-0-5"]
raw-window-handle-0-6                   = ["hwnd0/raw-window-handle-0-6"]

[dependencies]
#hwnd0.path                              = "../hwnd0"
hwnd0.version                           = "0.0.0-2024-01-10"
hwnd0.features                          = ["bytemuck-1", "winapi-0-3"]

[target.'cfg(windows)'.dependencies]
abibool                                 = "0.5"
abistr                                  = "0.2.0-rc.3"
bytemuck.version                        = "1"
bytemuck.features                       = ["derive"]
lazy_static                             = "1"
winresult                               = "0.1.3"
#winresult.git                          = "https://github.com/MaulingMonkey/winresult"
#winresult.rev                          = "9b877bf59efd8cc89fae4fd5f791a0e51cc53712"
#winresult.path                         = "../winresult/crates/winresult"

[target.'cfg(windows)'.dependencies.winapi]
version         = "0.3.9"
features = [
    # misc
    "std",

    # shared
    "d3d9types",
    "guiddef",
    "minwindef",
    "ntdef",
    "windef",
    "winerror",

    # um
    "errhandlingapi",
    "libloaderapi",
    "processthreadsapi",
    "sysinfoapi",
    "unknwnbase",
    "winuser",
]
